Add gh-pages scripts + homepage

--- a/package.json
+++ b/package.json
@@ -39,5 +39,6 @@
   },
   "devDependencies": {
     "gh-pages": "^6.3.0"
-  }
+  },
+  "homepage": "https://tuonoti2025.github.io/AuracarevirtualAI"
 }
