--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "auracare-mvp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tuonoti2025.github.io/AuracarevirtualAI",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
@@ -14,12 +15,16 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-  "start": "react-scripts start",
-  "build": "react-scripts build",
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d build"
-}
-
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -37,10 +42,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^6.3.0"
-  },
-  "homepage": "https://tuonoti2025.github.io/AuracarevirtualAI",
-
+  }
 }
